<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_item_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ellipsize="middle"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/xuhao"/>

    <TextView
        android:id="@+id/tv_item_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ellipsize="middle"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/biaoti"/>

    <TextView
        android:id="@+id/tv_item_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ellipsize="middle"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/neirong"/>

    <TextView
        android:id="@+id/tv_item_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ellipsize="middle"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/shijian"/>
</LinearLayout>